Refactor: Use constructor injection, custom exceptions, and global error handling. Ready for production.